[package]
name = "cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evalexpr = {git = "https://github.com/PaddyThePaddy/evalexpr", branch="main"}
clap = "4.0.18"
git-version = "0.3.5"
lazy_static = "1.4.0"
regex = "1.6.0"
atty = "0.2.14"
rustyline = "10.0.0"
